--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,3 +1,6 @@
+ <% if @photos.empty? %>
+    <p>No photos were added yet.</p>
+  <% end %>
 <div class="row">
 	<div class="col-lg-12">
 		<h1>Check out last weeks winners! </h1>
