--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,67 +27,36 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Brand</a>
+					<a class="navbar-brand" href="/">Designs</a>
 				</div>
-
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li >
-							<a href="#">Login</a>
+							<% if user_signed_in? -%>
+							<%= link_to 'Sign out', destroy_user_session_path, :method => :delete %>
+							<% else -%>
+							<%= link_to 'Sign in', new_user_session_path %>
+							<% end -%>
 						</li>
+						<% if !user_signed_in? -%>
 						<li>
-							<a href="#">Sign Up</a>
+						<%= link_to 'Sign up', new_user_registration_path %>
 						</li>
+						<% end -%>
 						<li>
-							<a href="#">Submit a Design</a>
+							
+							<%= link_to 'Submit A Design!', new_photo_path %>
 						</li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
-		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-			<!-- Indicators -->
-			<ol class="carousel-indicators">
-				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-			</ol>
 
-			<!-- Wrapper for slides -->
-			<div class="carousel-inner">
-				<div class="item active">
-					<img src="http://placehold.it/1200x315" alt="...">
-					<div class="carousel-caption">
-						<h3>Caption Text</h3>
-					</div>
-				</div>
-				<div class="item">
-					<img src="http://placehold.it/1200x315" alt="...">
-					<div class="carousel-caption">
-						<h3>Caption Text</h3>
-					</div>
-				</div>
-				<div class="item">
-					<img src="http://placehold.it/1200x315" alt="...">
-					<div class="carousel-caption">
-						<h3>Caption Text</h3>
-					</div>
-				</div>
-			</div>
-
-			<!-- Controls -->
-			<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a>
-			<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
-		</div>
 		<!-- Carousel -->
 
-		<div class="container gallery">
-			<div class="col-lg-12">
-				<%= yield %>
-			</div>
+		<%= yield %>
 
-		</div>
 	</body>
 	<script>
 		$(window).scroll(function() {
@@ -102,9 +71,7 @@
 			$("#wrapper").toggleClass("toggled");
 		});
 
-		$('.vote').click(function() {
-			$(this).toggleClass('on');
-		});
+		
 	</script>
 
 </html>
