--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,130 +1,184 @@
- <% if @photos.empty? %>
-    <p>No photos were added yet.</p>
-  <% end %>
-<div class="row">
-	<div class="col-lg-12">
-		<h1>Check out last weeks winners! </h1>
-	</div>
-	<div class="col-lg-4 col-xs-6 thumb">
-		<div class="col-lg-12 designs" >
-			<a class="thumbnail" href="#"> <%= cl_image_tag(@photos[1].image.url, :class => "expand", :width => 277, :height => 250,  :crop => :fill, :gravity => :center, :fetch_format=>:auto, :type=>"fetch") %> </a>
-			<div class="metadata" >
-				<ul class="list-meta list-inline">
-					<li>
-						<i class="fa fa-user"></i> <%= @photos[1].user.try(:username) %>
-					</li>
-					<li>
-						<i class="fa fa-eye"></i> 7
-					</li>
-					<li>
-						<i class="fa fa-thumbs-o-up"> </i> <%= @photos[1].votes.count %>
-					</li>
-					<li>
-						<i class="fa fa-commenting"></i> 0
-					</li>
-				</ul>
-			</div>
-			<div class="progress" style="background-color:#d9d9de; height: 10px;">
-				<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
-				aria-valuemin="0" aria-valuemax="100" style="width:80%">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+	<!-- Indicators -->
+	<ol class="carousel-indicators">
+		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+	</ol>
 
-				</div>
+	<!-- Wrapper for slides -->
+	<div class="carousel-inner">
+		<div class="item active">
+			<img src="http://placehold.it/1200x315" alt="...">
+			<div class="carousel-caption">
+				<h3>Caption Text</h3>
+			</div>
+		</div>
+		<div class="item">
+			<img src="http://placehold.it/1200x315" alt="...">
+			<div class="carousel-caption">
+				<h3>Caption Text</h3>
+			</div>
+		</div>
+		<div class="item">
+			<img src="http://placehold.it/1200x315" alt="...">
+			<div class="carousel-caption">
+				<h3>Caption Text</h3>
 			</div>
 		</div>
 	</div>
 
-	<div class="col-lg-4 col-xs-6 thumb">
-		<div class="col-lg-12 designs" >
-			<a class="thumbnail" href="#"> <%= cl_image_tag(@photos[1].image.url, :class => "expand", :width => 277, :height => 250,  :crop => :fill, :gravity => :center, :fetch_format=>:auto, :type=>"fetch") %> </a>
-			<div class="metadata" >
-				<ul class="list-meta list-inline">
-					<li>
-						<i class="fa fa-user"></i> <%= @photos[1].user.try(:username) %>
-					</li>
-					<li>
-						<i class="fa fa-eye"></i> 7
-					</li>
-					<li>
-						<i class="fa fa-thumbs-o-up"> </i> <%= @photos[1].votes.count %>
-					</li>
-					<li>
-						<i class="fa fa-commenting"></i> 0
-					</li>
-				</ul>
-			</div>
-			<div class="progress" style="background-color:#d9d9de; height: 10px;">
-				<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
-				aria-valuemin="0" aria-valuemax="100" style="width:80%">
-
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="col-lg-4 col-xs-6 thumb">
-		<div class="col-lg-12 designs" >
-			<a class="thumbnail" href="#"> <%= cl_image_tag(@photos[1].image.url, :class => "expand", :width => 277, :height => 250,  :crop => :fill, :gravity => :center, :fetch_format=>:auto, :type=>"fetch") %> </a>
-			<div class="metadata" >
-				<ul class="list-meta list-inline">
-					<li>
-						<i class="fa fa-user"></i> <%= @photos[1].user.try(:username) %>
-					</li>
-					<li>
-						<i class="fa fa-eye"></i> 7
-					</li>
-					<li>
-						<i class="fa fa-thumbs-o-up"> </i> <%= @photos[1].votes.count %>
-					</li>
-					<li>
-						<i class="fa fa-commenting"></i> 0
-					</li>
-				</ul>
-			</div>
-			<div class="progress" style="background-color:#d9d9de; height: 10px;">
-				<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
-				aria-valuemin="0" aria-valuemax="100" style="width:80%">
-
-				</div>
-			</div>
-		</div>
-	</div>
-
+	<!-- Controls -->
+	<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a>
+	<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
 </div>
-
-<div class="row">
-
-	<!-- for each will go here -->
-	<% if @photos.empty? %>
-	<p>
-		No photos were added yet.
-	</p>
-	<% end %>
-	<% @photos.each do |photo| %>
-	<div class="col-lg-3 col-xs-6 thumb">
-		<div class="col-lg-12 designs" >
-			<a class="thumbnail" href="#"> <%= cl_image_tag(photo.image.url, :class => "expand", :width => 277, :height => 250,  :crop => :fill, :gravity => :center, :fetch_format=>:auto, :type=>"fetch") %> </a>
-			<div class="metadata" >
-				<ul class="list-meta list-inline">
-					<li>
-						<i class="fa fa-user"></i> <%= photo.user.try(:username) %>
-					</li>
-					<li>
-						<i class="fa fa-eye"></i> 7
-					</li>
-					<li>
-						<i class="fa fa-thumbs-o-up"> </i> <%= photo.votes.count %>
-					</li>
-					<li>
-						<i class="fa fa-commenting"></i> 0
-					</li>
-				</ul>
+<div class="container gallery">
+	<div class="col-lg-12">
+		<% if @photos.empty? %>
+		<p>
+			No photos were added yet.
+		</p>
+		<% end %>
+		<div class="row">
+			<div class="col-lg-12">
+				<h1 style="text-align: center;">Check out last weeks winners! </h1>
 			</div>
-			<div style="background-color:white;">
-				<span class="vote"> </span>
+			<div class="col-lg-4 col-xs-6 thumb">
+				<div class="col-lg-12 designs text-center" >
+					<a class="thumbnail" href="#"> <%= cl_image_tag(@photos[1].image.url, :class => "expand", :width => 277, :height => 250,  :crop => :fill, :gravity => :center, :fetch_format=>:auto, :type=>"fetch") %> </a>
+					<div class="metadata" >
+						<ul class="list-meta list-inline">
+							<li>
+								<i class="fa fa-user"></i> <%= @photos[1].user.try(:username) %>
+							</li>
+							<li>
+								<i class="fa fa-eye"></i> 7
+							</li>
+							<li>
+								<i class="fa fa-thumbs-o-up"> </i> <%= @photos[1].votes.count %>
+							</li>
+							<li>
+								<i class="fa fa-commenting"></i> 0
+							</li>
+						</ul>
+					</div>
+					<div class="progress" style="background-color:#d9d9de; height: 10px;     margin-bottom: 10px !important;">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+						aria-valuemin="0" aria-valuemax="100" style="width:36%">
+
+						</div>
+					</div>
+					<button type="button" class="btn btn-success">
+						<span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Purchase!
+					</button>
+				</div>
 			</div>
+
+			<div class="col-lg-4 col-xs-6 thumb">
+				<div class="col-lg-12 designs text-center" >
+					<a class="thumbnail" href="#"> <%= cl_image_tag(@photos[1].image.url, :class => "expand", :width => 277, :height => 250,  :crop => :fill, :gravity => :center, :fetch_format=>:auto, :type=>"fetch") %> </a>
+					<div class="metadata" >
+						<ul class="list-meta list-inline">
+							<li>
+								<i class="fa fa-user"></i> <%= @photos[1].user.try(:username) %>
+							</li>
+							<li>
+								<i class="fa fa-eye"></i> 7
+							</li>
+							<li>
+								<i class="fa fa-thumbs-o-up"> </i> <%= @photos[1].votes.count %>
+							</li>
+							<li>
+								<i class="fa fa-commenting"></i> 0
+							</li>
+						</ul>
+					</div>
+					<div class="progress" style="background-color:#d9d9de; height: 10px;   margin-bottom: 10px !important;">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+						aria-valuemin="0" aria-valuemax="100" style="width:67%">
+
+						</div>
+					</div>
+					<button type="button" class="btn btn-success text-center">
+						<span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Purchase!
+					</button>
+				</div>
+			</div>
+
+			<div class="col-lg-4 col-xs-6 thumb">
+				<div class="col-lg-12 designs" >
+					<a class="thumbnail" href="#"> <%= cl_image_tag(@photos[1].image.url, :class => "expand", :width => 277, :height => 250,  :crop => :fill, :gravity => :center, :fetch_format=>:auto, :type=>"fetch") %> </a>
+					<div class="metadata" >
+						<ul class="list-meta list-inline">
+							<li>
+								<i class="fa fa-user"></i> <%= @photos[1].user.try(:username) %>
+							</li>
+							<li>
+								<i class="fa fa-eye"></i> 7
+							</li>
+							<li>
+								<i class="fa fa-thumbs-o-up"> </i> <%= @photos[1].votes.count %>
+							</li>
+							<li>
+								<i class="fa fa-commenting"></i> 0
+							</li>
+						</ul>
+					</div>
+					<div class="progress" style="background-color:#d9d9de; height: 10px;    margin-bottom: 10px !important;">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+						aria-valuemin="0" aria-valuemax="100" style="width:91%">
+
+						</div>
+					</div>
+					<button type="button" class="btn btn-success">
+						<span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Purchase!
+					</button>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="row">
+
+			<!-- for each will go here -->
+			<% if @photos.empty? %>
+			<p>
+				No photos were added yet.
+			</p>
+			<% end %>
+			<% @photos.each do |photo| %>
+			<div class="col-lg-3 col-xs-6 thumb">
+				<div class="col-lg-12 designs" >
+					<%= link_to cl_image_tag(photo.image.url, :class => "expand", :width => 277, :height => 250,  :crop => :fill, :gravity => :center, :fetch_format=>:auto, :type=>"fetch"),
+					{:controller => "photos", :action => "show", :id => photo.id}, :class => "thumbnail" %>
+					<div class="metadata" >
+						<ul class="list-meta list-inline">
+							<li>
+								<i class="fa fa-user"></i> <%= photo.user.try(:username) %>
+							</li>
+							<li>
+								<i class="fa fa-thumbs-o-up"> </i> <%= photo.votes.count %>
+							</li>
+							<li>
+								<i class="fa fa-commenting"></i> <%= photo.comments.count %>
+							</li>
+						</ul>
+					</div>
+					<div style="background-color:white;">
+					<% if user_signed_in? %>
+						<%	if photo.votes.select{ |u| u.try(:user_id) == current_user.id }.count == 1%>
+						<span id="<%= photo.id %>" class="vote on"> </span>
+						<% else %>
+						<span id="<%= photo.id %>" class="vote"> </span>
+						<%end%>
+						<% else %>
+						<span id="<%= photo.id %>" class="vote"> </span>
+						<% end %>
+					</div>
+				</div>
+			</div>
+			<% end %>
 		</div>
 	</div>
-	<% end %>
-
 </div>
 
