--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,41 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.password_field :username %>
-  </div>	
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
 <%= render "devise/shared/links" %>
+
+<div id="loginModal" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+				<h1 class="text-center">Login</h1>
+			</div>
+			<div class="modal-body">
+				<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+				<%= devise_error_messages! %>
+
+				<form class="form col-md-12 center-block">
+					<div class="form-group">
+						<%= f.email_field :email, autofocus: true, :class => "form-control input-lg", :placeholder => "Email"  %>
+					</div>
+					<div class="form-group">
+						<%= f.text_field :username, autocomplete: "off", :class => "form-control input-lg", :placeholder => "Password"  %>
+					</div>
+					<div class="form-group">
+						<% if @minimum_password_length %>
+						<em>(<%= @minimum_password_length %> characters minimum)</em>
+						<% end %>
+						<br />
+						<%= f.password_field :password, autocomplete: "off", :class => "form-control input-lg", :placeholder => "Password"  %>
+					</div>
+					<div class="form-group">
+
+						<%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control input-lg", :placeholder => "Password"  %>
+					</div>
+					<div class="form-group">
+						<%= f.submit "Sign Up" , :class => "btn btn-primary btn-lg btn-block"%>
+						<% end %>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
+
