--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -34,11 +34,7 @@
 </div>
 <div class="container gallery">
 	<div class="col-lg-12">
-		<% if @photos.empty? %>
-		<p>
-			No photos were added yet.
-		</p>
-		<% end %>
+
 		<div class="row">
 			<div class="col-lg-12">
 				<h1 style="text-align: center;">Check out last weeks winners! </h1>
@@ -68,7 +64,7 @@
 
 						</div>
 					</div>
-					<button type="button" class="btn btn-success">
+					<button type="button" class="btn btn-success text-center custombutton">
 						<span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Purchase!
 					</button>
 				</div>
@@ -99,7 +95,7 @@
 
 						</div>
 					</div>
-					<button type="button" class="btn btn-success text-center">
+					<button type="button" class="btn btn-success text-center custombutton">
 						<span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Purchase!
 					</button>
 				</div>
@@ -130,7 +126,7 @@
 
 						</div>
 					</div>
-					<button type="button" class="btn btn-success">
+					<button type="button" class="btn btn-success text-center custombutton">
 						<span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Purchase!
 					</button>
 				</div>
@@ -153,8 +149,9 @@
 					{:controller => "photos", :action => "show", :id => photo.id}, :class => "thumbnail" %>
 					<div class="metadata" >
 						<ul class="list-meta list-inline">
-							<li>
-								<i class="fa fa-user"></i> <%= photo.user.try(:username) %>
+
+							<li >
+								<i class="fa fa-user" ></i><a href="users/<%= photo.user.try(:id) %>"><%= photo.user.try(:username) %> </a>
 							</li>
 							<li>
 								<i class="fa fa-thumbs-o-up"> </i> <%= photo.votes.count %>
@@ -165,7 +162,7 @@
 						</ul>
 					</div>
 					<div style="background-color:white;">
-					<% if user_signed_in? %>
+						<% if user_signed_in? %>
 						<%	if photo.votes.select{ |u| u.try(:user_id) == current_user.id }.count == 1%>
 						<span id="<%= photo.id %>" class="vote on"> </span>
 						<% else %>
@@ -181,4 +178,31 @@
 		</div>
 	</div>
 </div>
+<script src="https://checkout.stripe.com/checkout.js"></script>
+<script>
+  var handler = StripeCheckout.configure({
+    key: '<%= Rails.configuration.stripe[:publishable_key] %>',
+   
+    locale: 'auto',
+    token: function(token) {
+      // Use the token to create the charge with a server-side script.
+      // You can access the token ID with `token.id`
+    }
+  });
 
+  $('.custombutton').on('click', function(e) {
+    // Open Checkout with further options
+    handler.open({
+      name: 'Demo Site',
+      description: '2 widgets',
+      zipCode: true,
+      amount: 2000
+    });
+    e.preventDefault();
+  });
+
+  // Close Checkout on page navigation
+  $(window).on('popstate', function() {
+    handler.close();
+  });
+</script>
